devops/kubernetes/ingress/ingress.yaml
# /Users/atorchinsky/gh/myCode/pablinProject/home-services-marketplace/devops/kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: home-services-ingress
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    rules:
        -
            host: home-services.local
            http:
                paths:
                    -
                        path: /api
                        pathType: Prefix
                        backend:
                            service:
                                name: api-gateway
                                port:
                                    number: 80
                    -
                        path: /
                        pathType: Prefix
                        backend:
                            service:
                                name: web-frontend
                                port:
                                    number: 80
